fix collapse

--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -13,19 +13,17 @@
 }
 
 .content {
-    height: 0;
-    overflow: hidden;
-    transition: height 0.6s ease;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out;
     color: #FF6060;
-    background-color: grey;
-    padding: 0 20px;
+    height: 0;
 }
 
 .contentShow {
-    height: 80%;
-    padding: 20px 20px 0 20px;
-    color: #FF6060;
-    background-color: #F5F5F5;
+   padding: 20px 20px 0 20px;
+   transition: all 0.6s ease-in-out;
+   height: 80%;
+   background-color: #F5F5F5;
 }
 
 .item {
